<resources>
    <string name="app_name">TimeManager</string>
    <string name="welcome_word">Everyone\n can manage\n time</string>
    <string name="Guide_Text_Title">PERMISSION CHECK</string>
    <string name="Guide_Text_Content">\tWe need the corresponding permissions to ensure that the app can run smoothly. Please authorize the app according to the following instructions. You cannot use this app without the following request permissions.
</string>
    <string name="Guide_Text_1">\tFirst, to display the lock interface, we need to obtain the floating window permission of your phone. You can click OK to jump to the corresponding interface and open the permission of "display on the upper layer of other applications" (i.e. floating window).</string>
    <string name="Guide_Text_2">\tNext, to track your application usage by time manage master, we need to check the application usage of the your phone, click OK to jump to the corresponding interface and open the permission of "allow access to usage record".</string>
    <string name="Main_Bottom_Button_1">Manager List</string>
    <string name="Main_Bottom_Button_2">Time List</string>
    <string name="Main_Bottom_Button_3">About</string>
    <string name="Tool_NoFind_PackName">Unknown</string>
    <string name="Time_List_Other">Other App</string>
    <string name="Date_Hour_Info">"%s h "</string>
    <string name="Date_Minute_Info">%s m</string>
    <string name="Date_Second_Info">%s s</string>
    <string name="Service_Name">TimeManager Check Service</string>
    <string name="Add_Plan">Add Plan</string>
    <string name="E_Plan_Start_Time">Start Time</string>
    <string name="E_Plan_End_Time">End Time</string>
    <string name="E_Plan_Time">Setting Time</string>
    <string name="E_Plan_Apps">Allow Apps List</string>
    <string name="E_Plan_Apps_Setting">Setting</string>
    <string name="Button_OK">OK</string>
    <string name="Time_Picker_Title">Select Time</string>
    <string name="Select_App_Title">Allow Apps List</string>
    <string name="E_Plan_Name">Plan Name</string>
    <string name="E_Plan_Week_1">Mon</string>
    <string name="E_Plan_Week_2">Tue</string>
    <string name="E_Plan_Week_3">Wed</string>
    <string name="E_Plan_Week_4">Thu</string>
    <string name="E_Plan_Week_5">Fri</string>
    <string name="E_Plan_Week_6">Sat</string>
    <string name="E_Plan_Week_7">Sun</string>
    <string name="E_Plan_Warn_1">Please choose the day of the week.</string>
    <string name="E_Plan_Warn_2">Please enter the name of the plan.</string>
    <string name="Plan_List_Add">Add Plan</string>
    <string name="Plan_Week_1">Mon.</string>
    <string name="Plan_Week_2">Tue.</string>
    <string name="Plan_Week_3">Wed.</string>
    <string name="Plan_Week_4">Thu.</string>
    <string name="Plan_Week_5">Fri.</string>
    <string name="Plan_Week_6">Sat.</string>
    <string name="Plan_Week_7">Sun.</string>
    <string name="Plan_Week_Separator" />
    <string name="Plan_Delete_Title">Delete</string>
    <string name="Plan_Delete_Text">Whether to delete this plan ?</string>
    <string name="Button_Cancel">Cancel</string>
</resources>