<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:behavior_peekHeight="auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="360dp"
            android:layout_height="100dp"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:text="@string/Plan_Delete_Title"
            android:textAlignment="center"
            android:textColor="@color/textTitleColor"
            android:textSize="20dp"
            android:textStyle="bold"
            tools:ignore="SpUsage" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:paddingLeft="20dp"
            android:paddingTop="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="0dp"
            android:text="@string/Plan_Delete_Text"
            android:textAlignment="viewStart"
            android:textSize="15dp"
            tools:ignore="SpUsage" />


        <Button
            android:id="@+id/Delete_Plan_Button"
            android:layout_width="320dp"
            android:layout_height="40dp"
            android:layout_marginBottom="20dp"
            android:text="@string/Button_OK"
            android:textColor="@color/textTitleColor"
            android:textSize="15dp"
            tools:ignore="SpUsage" />


    </LinearLayout>
</androidx.core.widget.NestedScrollView>
