<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.EPlanActivity">

    <TextView
        android:id="@+id/E_Plan_Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:padding="20dp"
        android:paddingStart="20dp"
        android:text="@string/Add_Plan"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/E_Plan_Time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:paddingStart="20dp"
        android:text="@string/E_Plan_Time"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/E_Plan_Title" />


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/E_Plan_Start_Time_Button"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="?android:attr/selectableItemBackground"
        android:backgroundTint="@color/background"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        app:cardCornerRadius="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/E_Plan_Time"
        app:strokeColor="@color/colorPrimary"
        app:strokeWidth="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingStart="10dp"
                android:paddingEnd="5dp"
                android:text="@string/E_Plan_Start_Time"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/E_Plan_Start_Time_Text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center|center_vertical"
                android:paddingStart="5dp"
                android:paddingEnd="10dp"
                android:text="TextView"
                android:textColor="@color/colorPrimary"
                android:textSize="15dp"
                android:textStyle="bold" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/E_Plan_End_Time_Button"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="?android:attr/selectableItemBackground"
        android:backgroundTint="@color/background"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        app:cardCornerRadius="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/E_Plan_Start_Time_Button"
        app:strokeColor="@color/colorPrimary"
        app:strokeWidth="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingStart="10dp"
                android:paddingEnd="5dp"
                android:text="@string/E_Plan_End_Time"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/E_Plan_End_Time_Text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center|center_vertical"
                android:paddingStart="5dp"
                android:paddingEnd="10dp"
                android:text="TextView"
                android:textColor="@color/colorPrimary"
                android:textSize="15dp"
                android:textStyle="bold" />
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/E_Plan_AppList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingStart="20dp"
        android:text="@string/E_Plan_Apps"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/E_Plan_End_Time_Button" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/E_Plan_Apps_List_Button"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="?android:attr/selectableItemBackground"
        android:backgroundTint="@color/background"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        app:cardCornerRadius="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/E_Plan_AppList"
        app:strokeColor="@color/colorPrimary"
        app:strokeWidth="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingStart="10dp"
                android:paddingEnd="5dp"
                android:text="@string/E_Plan_Apps"
                android:textSize="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center|center_vertical"
                android:paddingStart="5dp"
                android:paddingEnd="10dp"
                android:text="@string/E_Plan_Apps_Setting"
                android:textColor="@color/colorPrimary"
                android:textSize="15dp"
                android:textStyle="bold" />
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <Button
        android:id="@+id/E_Plan_Button"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginBottom="20dp"
        android:text="@string/Button_OK"
        android:textColor="@color/textTitleColor"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>